# qtasks_webview

./: README.md  pyproject.toml
.github/workflows/: publish.yml
qtasks_webview/: __init__.py
